Complete refactor of engine_getBlobsV* methods (#11204)
Signed-off-by: Fabio Di Fabio <fabio.difabio@consensys.net>